<resources>
    <string name="app_name">MUTRAV</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="datepicker">DatePicker</string>
    <string name="timepicker">TimePicker</string>
    <string name="title_activity_find_ride">FindRideActivity</string>
    <string name="pref_header_general">General</string>
    <string name="title_activity_ride_details">RideDetails</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name"> </string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.ilmkidunya.com/colleges/lahore-college-for-women-university-lcwu-lahore.aspx</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.ilmkidunya.com/colleges/lahore-college-for-women-university-lcwu-lahore.aspx</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.ilmkidunya.com/colleges/lahore-college-for-women-university-lcwu-lahore.aspx</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_new_notification_sound">Notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="slide_3_desc">jkhj fkjh fdjkhfdjk fdsjk fdjksh fsdjkh fdjkh fsdjkhf jdkhsdf kfsdhkjh kj</string>

    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="key_send_feedback">key_send_feedback</string>
    <string name="title_activity_settings">Settings</string>


    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="google_maps_API_key">AIzaSyDT105bjRTGIqtYwCY0WfnUKQ3rzjzl_o0</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_map2">Map</string>
</resources>
